[gd_scene load_steps=6 format=3 uid="uid://be6kuksy0lijm"]

[ext_resource type="Script" path="res://main_ui.gd" id="1_r4clx"]
[ext_resource type="FontFile" uid="uid://bgt0wktokjwnl" path="res://assets/VT323-Regular.ttf" id="1_rmc51"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bi1r6"]
bg_color = Color(0.0235294, 0.0235294, 0.215686, 1)
border_color = Color(0.854902, 0.647059, 0.12549, 0.556863)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pp6o0"]
bg_color = Color(0.108257, 0.108401, 0.525029, 1)

[sub_resource type="Theme" id="Theme_brgmk"]
default_font = ExtResource("1_rmc51")
default_font_size = 48

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_r4clx")

[node name="Border" type="ColorRect" parent="."]
custom_minimum_size = Vector2(0, 60)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.854902, 0.647059, 0.12549, 0.556863)

[node name="QuestBar" type="ProgressBar" parent="Border"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bi1r6")
theme_override_styles/fill = SubResource("StyleBoxFlat_pp6o0")
value = 50.0
show_percentage = false

[node name="QuestDuration" type="RichTextLabel" parent="Border/QuestBar"]
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.0
offset_right = -998.0
theme = SubResource("Theme_brgmk")
bbcode_enabled = true
text = "69"
scroll_active = false

[node name="TargetWord" type="RichTextLabel" parent="Border/QuestBar"]
self_modulate = Color(0.854902, 0.647059, 0.12549, 1)
clip_children = 2
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 327.0
offset_right = -327.0
theme = SubResource("Theme_brgmk")
bbcode_enabled = true
text = "[center]you"
scroll_active = false

[node name="Sheen" type="ColorRect" parent="Border/QuestBar/TargetWord"]
modulate = Color(0.498039, 1, 0.831373, 1)
layout_mode = 0
offset_left = -62.0
offset_top = -18.0
offset_right = -40.0
offset_bottom = 59.0
rotation = 0.241609

[node name="Score" type="RichTextLabel" parent="Border/QuestBar"]
modulate = Color(0.854902, 0.647059, 0.12549, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 953.0
theme = SubResource("Theme_brgmk")
bbcode_enabled = true
text = "[right]0"
scroll_active = false
